tests/paczka1/fuzzy1/99563549.err
Error in line 14: 8YtxW A307 38,1
Error in line 20: 8YtxW A871 94,9
Error in line 23: A662 A662 3,
Error in line 16: lPiPRMI A307 11,2
Error in line 33: Jtodq148L01 A316 2,18
